#################################################################
#  Date             18/06/2019                                  #
#  Author           nChain's employees                          #
#                                                               #
#  Copyright (c) 2019 nChain Limited. All rights reserved       #
#################################################################

set(SDK_APPLICATION_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(TS_protobuf)
