#################################################################
#  Date             24/04/2019                                  #
#  Author           nChain's employees                          #
#                                                               #
#  Copyright (c) 2019 nChain Limited. All rights reserved       #
#################################################################

add_subdirectory(BigNumbers)
add_subdirectory(MessageHash)
add_subdirectory(Polynomial)
add_subdirectory(SymEncDec)
add_subdirectory(AsymKey)
add_subdirectory(ECPoint)
add_subdirectory(SecretSplit)
add_subdirectory(BSVAddress)
